basic features added
add weight and drop system, falling anim, weight calculation

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       <div id="ground"></div>
       <div id="stand"></div>
       <div id="triangle"></div>
+      <div id="drop">
+        <div id="left-drop"></div>
+        <div id="right-drop"></div>
+      </div>
     </div>
 
     <script src="main.js"></script>
