--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div id="game-scene">
       <div class="hud">
         <button id="pause-button">⏸️</button>
+        <button id="mute-button">🔈</button>
         <div id="pause-text">Game Paused</div>
         <div id="next-weight">
           Next Weight: <span id="next-weight-value">-</span> kg
