code refactoring and torque preview
final improvements added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <div id="next-weight">
           Next Weight: <span id="next-weight-value">-</span> kg
         </div>
+        <div id= torque-preview>Torque: </div>
       </div>
       <div id="ground"></div>
       <div id="stand"></div>
